--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,9 @@ name = "esapi-mcp-server"
 version = "0.1.0" 
 requires-python = ">=3.11" 
 dependencies = [ 
-    "fastmcp", 
-    "sentence-transformers", 
-    "numpy", 
-    "torch", 
-] 
+    "fastmcp",  
+    "numpy",
+    "openai>=1.0.0",
+    "scikit-learn>=1.3.0",
+    "tqdm"    
+]
