--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,10 +2,10 @@
 name = "esapi-mcp-server" 
 version = "0.1.0" 
 requires-python = ">=3.11" 
-dependencies = [ 
-    "fastmcp",  
+dependencies = [
+    "fastmcp",
     "numpy",
     "openai>=1.0.0",
     "scikit-learn>=1.3.0",
-    "tqdm"    
+    "tqdm",
 ]
